# polygon_verifier

./: Cargo.toml  LICENSE  README.md
gevulot/: manifest_verifier.json  ops-run-polygon-verifier.json
src/: main.rs
