[package]
name = "polygon_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gevulot-shim = { path = "../gevulot/crates/shim" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "4.0.14", features = ["derive", "env"] }
